<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>uk.co.magictractor</groupId>
	<artifactId>spew</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<!-- https://stackoverflow.com/questions/38993446/cannot-create-launcher-without-at-least-one-testengine-consider-adding-an-engin -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<junit.jupiter.version>5.3.1</junit.jupiter.version>
		<!-- <junit.platform.version>1.0.0-M2</junit.platform.version> // for surefire 
			plugin -->
	</properties>

	<build>
		<!-- <sourceDirectory>src</sourceDirectory> -->
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<version>2.3.0</version>
		</dependency>
		<!-- Doh! we're using gson... -->
		<!-- <dependency> <groupId>com.fasterxml.jackson.core</groupId> <artifactId>jackson-annotations</artifactId> 
			<version>2.9.8</version> </dependency> -->
		<!-- <dependency> <groupId>com.fasterxml.jackson.core</groupId> <artifactId>jackson-core</artifactId> 
			<version>2.9.8</version> </dependency> -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>

		<!-- For utils, including Iterator concatenation and filtering. -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>27.0.1-jre</version>
		</dependency>

		<!-- For reading metadata from local photo files -->
		<dependency>
			<groupId>com.drewnoakes</groupId>
			<artifactId>metadata-extractor</artifactId>
			<version>2.11.0</version>
		</dependency>
		
		<!-- For making requests without auth, or wrapping with auth, as done by Boa connections.
		Optional (provided scope), code based on Java's HttpUrlConnection is used if this is not present. -->
		<dependency>
    		<groupId>org.apache.httpcomponents</groupId>
    		<artifactId>httpclient</artifactId>
    		<version>4.5.9</version>
    		<scope>provided</scope>
		</dependency>

		<!-- For callback server -->
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-all</artifactId>
			<version>4.1.38.Final</version>
			<!-- Provided because authorization handling could be done by pasting verification codes rather than using a callback,
				or another CallbackServer implementation could be used. -->
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>io.undertow</groupId>
			<artifactId>undertow-core</artifactId>
			<version>2.0.25.Final</version>
			<scope>provided</scope>
		</dependency>

		<!-- For determining content types -->
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1.1</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-core</artifactId>
  			<version>1.22</version>
		</dependency>
		
		<!-- Different OAuth client implementations for spikes.
             One day these will be spit into different projects. -->
		<dependency>
            <groupId>org.springframework.social</groupId>
            <artifactId>spring-social-core</artifactId>
            <version>2.0.0.M4</version>
        </dependency>
        <!-- used with GenericApiBinding, might be able to remove later -->
        		<dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.9.9.2</version>
        </dependency>
        <!-- <dependency>
            <groupId>org.springframework.social</groupId>
            <artifactId>spring-social-twitter</artifactId>
            <version>1.1.2.RELEASE</version>
        </dependency> -->

		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.26</version>
		</dependency>

		<!-- test dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<!-- <scope>test</scope> -->
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
			<!-- provided scope since there are a few main() methods in use and this works better with Eclipse -->
			<scope>provided</scope>
		</dependency>

		<!-- <dependency> <groupId>org.hamcrest</groupId> <artifactId>hamcrest-library</artifactId> 
			<version>1.3</version> <scope>test</scope> </dependency> -->

		<!-- AssertJ rather than Hamcrest -->
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.11.1</version>
			<scope>test</scope>
		</dependency>
		
	</dependencies>
	

<!-- for Spring Social 2.0.0 milestones -->
<repositories>
    <repository>
        <id>spring-milestones</id>
        <name>Spring Milestones</name>
        <url>https://repo.spring.io/libs-milestone</url>
        <snapshots>
            <enabled>false</enabled>
        </snapshots>
    </repository>
</repositories>

</project>
